[gd_scene load_steps=28 format=3 uid="uid://bv8nwk1opdjlw"]

[ext_resource type="PackedScene" uid="uid://4y05vc33l6jx" path="res://Scenes/Character.tscn" id="1_h0vor"]
[ext_resource type="Script" uid="uid://cum21nkxacfyc" path="res://Scripts/WorldMap.gd" id="1_lgebn"]
[ext_resource type="PackedScene" uid="uid://c1oai7yh2v8b" path="res://Scenes/CookingSpot.tscn" id="6_6g17r"]
[ext_resource type="PackedScene" uid="uid://ds5ia05mmwfww" path="res://UI/QuickBar.tscn" id="6_n74fn"]
[ext_resource type="PackedScene" uid="uid://bylyjbc8mqhuf" path="res://UI/CookingUI.tscn" id="7_k2sq4"]
[ext_resource type="PackedScene" uid="uid://b385726t5548h" path="res://UI/CraftingMenu.tscn" id="7_shg8v"]
[ext_resource type="Script" uid="uid://b8isbdtst717r" path="res://Scripts/CraftingRecipe.gd" id="8_dpfav"]
[ext_resource type="PackedScene" uid="uid://dpv72e52rgi2" path="res://Scenes/NPC.tscn" id="8_e6b1v"]
[ext_resource type="Resource" uid="uid://cvji675lanqgy" path="res://Resources/mushroom_pile_recipe.tres" id="9_r764t"]
[ext_resource type="PackedScene" uid="uid://d2p3i01l2a2ny" path="res://Scenes/WorldDeco.tscn" id="9_sclet"]
[ext_resource type="Resource" uid="uid://dve60r0fuq10f" path="res://Resources/village_chief_dialogue.tres" id="9_tp53l"]
[ext_resource type="PackedScene" uid="uid://b7i0o2ynwdbgj" path="res://UI/DialogueUI.tscn" id="10_0qwcn"]
[ext_resource type="Resource" uid="uid://dgpd4648nal6n" path="res://Resources/apple_cross_recipe.tres" id="10_r764t"]
[ext_resource type="PackedScene" uid="uid://bhn0ey82rjjr6" path="res://UI/QuestJournalUI.tscn" id="11_3xaw4"]
[ext_resource type="Texture2D" uid="uid://dt6f0fr678uln" path="res://Assets/spaceship-crashed.png" id="11_j6kvx"]
[ext_resource type="PackedScene" uid="uid://bvdi3p2fcoxc1" path="res://Scenes/WorldItem.tscn" id="12_luyaf"]
[ext_resource type="Resource" uid="uid://c20k3kgf3o340" path="res://Resources/banana.tres" id="13_0vgg2"]
[ext_resource type="Resource" uid="uid://dg1n8k682l5lp" path="res://Resources/apple.tres" id="14_5d56a"]
[ext_resource type="PackedScene" uid="uid://cvtwcxxlvg3g2" path="res://Scenes/EncounterEntity.tscn" id="15_y6rwo"]
[ext_resource type="Resource" uid="uid://bijmywa71k1gc" path="res://Resources/mushroom.tres" id="15_yndps"]
[ext_resource type="Resource" uid="uid://j4v36lmn88u4" path="res://Resources/enemy_group_1.tres" id="16_y6rwo"]
[ext_resource type="Texture2D" uid="uid://c6dt0pqw3224h" path="res://Assets/grassbeast-grass.png" id="17_n74fn"]
[ext_resource type="PackedScene" uid="uid://dc4dc4lchwb3m" path="res://Scenes/Map.tscn" id="17_u8pi1"]
[ext_resource type="PackedScene" uid="uid://c4trqsgcb7hcb" path="res://Scenes/Enemy.tscn" id="17_ymbeh"]
[ext_resource type="Resource" uid="uid://fs7l0cm0i77b" path="res://Resources/chef_dialogue.tres" id="18_u8pi1"]
[ext_resource type="PackedScene" uid="uid://mjrdj64swlve" path="res://UI/PlayerMenu.tscn" id="18_yndps"]
[ext_resource type="PackedScene" uid="uid://dflmsf3xes8u4" path="res://Scenes/Tree.tscn" id="20_xetgg"]

[node name="WorldMap" type="Node2D" groups=["Player"]]
script = ExtResource("1_lgebn")

[node name="UI" type="Node2D" parent="."]

[node name="CookingUi" parent="UI" instance=ExtResource("7_k2sq4")]
visible = false

[node name="DialogueUI" parent="UI" instance=ExtResource("10_0qwcn")]
visible = false

[node name="QuestJournalUI" parent="UI" instance=ExtResource("11_3xaw4")]
process_mode = 3
visible = false

[node name="PlayerMenu" parent="UI" instance=ExtResource("18_yndps")]
visible = false

[node name="QuickBar" parent="UI" instance=ExtResource("6_n74fn")]

[node name="CraftingMenu" parent="UI" instance=ExtResource("7_shg8v")]
visible = false
recipes = Array[ExtResource("8_dpfav")]([ExtResource("9_r764t"), ExtResource("10_r764t")])

[node name="Ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Map" parent="Ysort" instance=ExtResource("17_u8pi1")]
y_sort_enabled = true
position = Vector2(-128, 30)

[node name="Tree" parent="Ysort" instance=ExtResource("20_xetgg")]
y_sort_enabled = true
position = Vector2(540, 426)

[node name="Character" parent="Ysort" groups=["Player"] instance=ExtResource("1_h0vor")]
y_sort_enabled = true
position = Vector2(1069, 448)

[node name="Creatures" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Enemy" parent="Ysort/Creatures" instance=ExtResource("17_ymbeh")]
position = Vector2(1349, 485)

[node name="Enemy2" parent="Ysort/Creatures" instance=ExtResource("17_ymbeh")]
position = Vector2(253, 471)

[node name="Enemy3" parent="Ysort/Creatures" instance=ExtResource("17_ymbeh")]
y_sort_enabled = true
position = Vector2(162, 326)

[node name="WorldDeco" parent="Ysort" instance=ExtResource("9_sclet")]
y_sort_enabled = true
position = Vector2(1357, 360)
texture = ExtResource("11_j6kvx")

[node name="WorldItem" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Banana" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1043, 236)
item = ExtResource("13_0vgg2")

[node name="Apple" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1152, 208)
item = ExtResource("14_5d56a")

[node name="Apple2" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1235, 195)
item = ExtResource("14_5d56a")

[node name="Apple3" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1320, 210)
item = ExtResource("14_5d56a")

[node name="Apple4" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1398, 237)
item = ExtResource("14_5d56a")

[node name="Mushroom" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1175, 367)
item = ExtResource("15_yndps")

[node name="Mushroom2" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1119, 355)
item = ExtResource("15_yndps")

[node name="Mushroom3" parent="Ysort/WorldItem" instance=ExtResource("12_luyaf")]
position = Vector2(1060, 349)
item = ExtResource("15_yndps")

[node name="WorldDeco2" parent="Ysort" instance=ExtResource("9_sclet")]
position = Vector2(420, 214)
texture = ExtResource("17_n74fn")

[node name="CookingSpot" parent="." groups=["CookingSpots"] instance=ExtResource("6_6g17r")]
visible = false
position = Vector2(287, 406)

[node name="EncounterEntity" parent="." instance=ExtResource("15_y6rwo")]
position = Vector2(437, 330)
encounter = ExtResource("16_y6rwo")

[node name="NPCs" type="Node2D" parent="."]

[node name="NPC" parent="NPCs" groups=["NPCs"] instance=ExtResource("8_e6b1v")]
visible = false
position = Vector2(1125, 277)
dialogue = ExtResource("9_tp53l")

[node name="Label2" type="Label" parent="NPCs/NPC"]
offset_left = -19.0
offset_top = -31.0
offset_right = 21.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "村长"

[node name="NPC2" parent="NPCs" groups=["NPCs"] instance=ExtResource("8_e6b1v")]
position = Vector2(898, 449)
dialogue = ExtResource("18_u8pi1")

[node name="Label2" type="Label" parent="NPCs/NPC2"]
visible = false
offset_left = -19.0
offset_top = -69.0
offset_right = 21.0
offset_bottom = -46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "厨子"
